Update README.md Change preempteeng for bingo

--- a/ansible/db/templates/postgresql.j2
+++ b/ansible/db/templates/postgresql.j2
@@ -9,7 +9,8 @@ unix_socket_directories = '/var/run/postgresql' # comma-separated list of direct
 ssl = on
 ssl_cert_file = '/etc/ssl/certs/ssl-cert-snakeoil.pem'
 ssl_key_file = '/etc/ssl/private/ssl-cert-snakeoil.key'
-shared_buffers = {{ DB_SHARED_BUFF }}			# min 128kB
+shared_buffers = {{ DB_SHARED_BUFF }}
+work_mem = {{ DB_WORK_MEM  }}		# min 128kB
 dynamic_shared_memory_type = posix	# the default is usually the first option
 max_wal_size = 1GB
 min_wal_size = 80MB
